# sbom_zkp

./: .gitignore
.github/: copilot-instructions.md
sbom-groth16/: Dockerfile.zk  docker-compose-besu.yml  docker-compose.yml
sbom-groth16/QBFT-Network/: qbftConfigFile.json
sbom-groth16/QBFT-Network/Node-1/data/: besu.networks  besu.ports  key.pub
sbom-groth16/QBFT-Network/Node-2/data/: besu.networks  besu.ports  key
sbom-groth16/QBFT-Network/Node-3/data/: DATABASE_METADATA.json  besu.networks  besu.ports  key.pub
sbom-groth16/QBFT-Network/networkFiles/: genesis.json
sbom-groth16/QBFT-Network/networkFiles_old/: genesis.json
sbom-groth16/hardhat/: .env  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
sbom-groth16/hardhat/contracts/: Counter.sol  Counter.t.sol
sbom-groth16/hardhat/scripts/: deploy.ts
sbom-groth16/hardhat/typechain-types/: Counter.ts  hardhat.d.ts  index.ts
sbom-groth16/sbom/comp_A/: comp_A_sbom.json  comp_A_sbom_ready.json  comp_A_tree_data.json  merkle_tree.dot  requirements.in
sbom-groth16/sbom/sbom-zkp-tool/: merkle_tree_generator.js  merkle_tree_generator_visual.js  package-lock.json  package.json  zkp_sbom_preprocessing.js  zkp_sbom_preprocessing_parse.js
sbom-groth16/zkbuilder/circom/: input.json  pot12_0001.ptau  proof.json  public.json  verification_key.json  verify_fw.circom  verify_fw.r1cs  verify_fw.sym  verify_fw_0000.zkey  verify_fw_final.zkey  witness.wtns
sbom-groth16/zkbuilder/contracts/: Verifier.sol
sbom-risc0/sbom-verify/core/: Cargo.toml
sbom-risc0/sbom-verify/methods/: Cargo.toml
sbom-risc0/sbom/flask_server/: flask_server_sbom.json  flask_server_sbom_enriched.json  flask_server_tree_data.json  merkle_tree.dot  pyproject.toml  requirements.txt
sbom-risc0/sbom/sbom_zkp_tool/: merkle_tree_visual.js  package-lock.json  package.json  preprocessing_sbom.js
zk-verifier/: Cargo.toml
zk-verifier/src/: main.rs
zkVM-server/:  README.md  README.md  docker-compose.yml
zkVM-server/ipfs/: README  README.md  swarm.key
zkVM-server/node-api/: .env  Dockerfile  README  package-lock.json  package.json  server.js  tsconfig.json
zkVM-server/node-api/proofs/: proof-my-iot-device-v1-1768581652584.json
zkVM-server/node-api/scripts/: client-test.js  client-test.ts
zkVM-server/node-api/src/: client-test.ts  index.ts  types.ts
zkVM-server/rust-prover-api/: .env  Dockerfile  README  README.md
zkVM-server/rust-prover-api/host/: Cargo.toml
zkVM-server/rust-prover-api/host/src/: main.rs
zkVM-server/rust-prover-api/methods/guest/: Cargo.toml
zkVM-server/rust-prover-api/methods/guest/src/: main.rs
zkVM-server/rust-prover-recursive/: Cargo.toml  profile.pb
zkVM-server/rust-prover-recursive/host/: Cargo.toml
zkVM-server/rust-prover-recursive/host/src/: main.rs
zkVM-server/rust-prover-recursive/methods/: build.rs
zkVM-server/rust-prover-recursive/methods/guest/: Cargo.toml
zkVM-server/rust-prover-recursive/methods/guest/src/: main.rs
zkVM-server/rust-prover-recursive/shared_data/: Cargo.toml
zkVM-server/sbom_service/: Dockerfile  package-lock.json  package.json  tree.dot  tsconfig.json
zkVM-server/sbom_service/output_graphs/: dependency_tree.dot  merkle_tree.dot
zkVM-server/sbom_service/src/: index.ts  main.ts  processor.ts
zkVM-server/sbom_service/uploads/: requirements.in  requirements.in.json  requirements_a.txt.json  sbom.json
zkVM-server/scripts/: merkle_root_generation.py
zkVM-server/shared/: types.ts
(+69 files in other folders)
