[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
# 核心驗證庫
risc0-zkvm = { version = "^3.0.4" }
# 用於讀取十六進位的 Image ID
hex = "0.4"
# 用於處理命令列參數
clap = { version = "4.0", features = ["derive"] }
# 非同步處理 (如果需要從網路抓取)
tokio = { version = "1.0", features = ["full"] }

reqwest = { version = "0.11", features = ["blocking"] }
bincode = "1.3"
serde_json = "1.0.149"
