[project]
name = "flask-server"
version = "2.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3)",
    "requests (>=2.33.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "urllib3 (>=2.6.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
