[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 共享的資料結構
core = { path = "../core" }

# 序列化工具：必須開啟 "derive" 功能才能處理你的結構體
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

hex = "0.4"
