[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 共享的資料結構
shared_data = { path = "../shared_data" }

# 序列化工具：必須開啟 "derive" 功能才能處理你的結構體
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

hex = "0.4"
# axum dependencies
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"
tracing = "0.1"
ipfs-api-backend-hyper = "0.6"
bytes = "1.0"
base64ct = "1.6"  # Pin to older version that doesn't require edition 2024
futures = "0.3"